add secrets.toml to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -647,7 +647,12 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 
-#END VISUAL STUDIO
+#END PYCHARM
 #*****************************************************************************
 #*****************************************************************************
 #*****************************************************************************
+
+
+#BEGIN STREAMLIT
+
+.streamlit/secrets.toml
