--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ streamlit = "^1.26.0"
 tiktoken = "^0.4.0"
 sqlalchemy = "^2.0.20"
 mysqlclient = "^2.2.0"
+google-cloud-firestore = "^2.12.0"
 
 
 [build-system]
