--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,13 @@ authors = ["Colin Matthews"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.13"
 openai = "^0.28.0"
 streamlit = "^1.26.0"
 tiktoken = "^0.4.0"
 google-cloud-firestore = "^2.12.0"
+sklearn = "^0.0.post9"
+scipy = "^1.11.2"
 
 
 [build-system]
